FORMAT FIXING BECAUSE I OVERLAPPED CLASSES. JELP

--- a/app.css
+++ b/app.css
@@ -188,6 +188,7 @@ nav a.active {
     padding: 50px 20px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .profile-card {
@@ -197,6 +198,8 @@ nav a.active {
     margin: auto;
     margin-right: 100px;
     margin-left: 100px;
+    width: 60%;
+    height: 40%;
     padding: 20px;
     /* display: inline-block; */
     box-shadow: 5px 5px 5px 0px rgba(255, 201, 54, 0.25);
@@ -209,24 +212,28 @@ nav a.active {
     height: 220px;
     object-fit: cover;
     margin-right: 20px;
+    align-self: center;
 }
 
 .profile-card-content {
+    /* margin-top: 50px; */
+    align-self: center;
     text-align: left;
+    flex-direction: row;
 }
 
 .profile-card-content h1 {
     color: var(--activeorange);
     margin: 0;
-    font-size: 30px;
     font-weight: bold;
+    font-size: 4vh;
 }
 
 .profile-card-content p {
     margin: 10px 0 0 0;
-    font-size: 22px;
     line-height: 1.6;
-    color: #FFC107;
+    color: var(--yellow);
+    font-size: 2vh;
 }
 
 .button-grid {
@@ -234,7 +241,7 @@ nav a.active {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
     margin: 50px auto;
-    margin-left: 51vh;
+    margin-left: 50vh;
     max-width: 50vh;
 }
 
@@ -370,6 +377,7 @@ nav a.active {
     justify-content: center;
     align-items: center;
     gap: 20vh;
+    height: 30%;
     /* Space between the image and text box */
     box-sizing: border-box;
 
@@ -403,7 +411,7 @@ nav a.active {
     justify-content: center;
     gap: 40px;
     padding: 20px 0;
-    margin-top: 20px;
+    margin-top: -40vh;
 }
 
 .contact-icons a {
@@ -455,7 +463,7 @@ nav a.active {
     border-radius: 1%;
 }
 
-.profile-card {
+.about-profile-card {
     flex-direction: column;
     background-color: var(--darkbrown);
     padding: 1.5rem 2rem;
@@ -466,7 +474,7 @@ nav a.active {
     line-height: 1.6;
 }
 
-.profile-card p {
+.about-profile-card p {
     font-size: 16px;
     margin: 0;
     margin-bottom: 1rem;
@@ -515,8 +523,8 @@ nav a.active {
     padding: 1rem;
     border-radius: 10px;
     color: var(--lightyellow);
-    max-width: 600px;
-    height: 70%;
+    max-width: 50%;
+    height: 90%;
     border: 1px solid var(--lightbrown);
     box-shadow: 3px 3px 5px 0px rgba(255, 201, 54, 0.25);
     line-height: 1.6;
